--- a/index.html
+++ b/index.html
@@ -1,17 +1,36 @@
-<DOCTYPE html>
-    <html>
-        <head>
-            <meta charsed="UTF-8" lang="pt-br">
-            <meta name="viewrpont" content="width=device-width, initial-scale=1.0">
-            <title>Meu portfólio</title>
-        </head>
-        <body>
-            <header
-            <h1>Meu site</h1>
-            <nav>
-                <a href="index.html">Sobre mim</a>
-            </nav>
-        </body>
-        <div classe="apresentção">
-            <h1>Olá! Eusou</h1>
-        </div>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charsed="UTF-8" lang="pt-br">
+    <meta name="viewrpont" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <title>Meu portfólio</title>
+</head>
+<body> 
+    <header>
+        <img src="img/portifolio.jfif" class="rounded-circle" alt="fogo do gmail" width="150" height="150">
+        <h1>Meu site</h1>
+        <nav>
+            <a href="index.html">Sobre mim</a>
+        </nav> 
+    </header>
+    <div classe="apresentção">
+        <h1>Olá! Eu sou Isabele!</h1>
+        <p>Eu trabalho com solos</p>
+    </div> 
+    <h1>Example heading <span class="badge text-bg-secondary">New</span></h1> 
+    <p>técnica principal</p>
+    <div>
+        <p class="badge bg-secondary">HTML</p>
+        <p class="badge bg-secondary">CSS</p>
+    </div>
+    <header>
+        <img src="img/portifolio.jfif" class="rounded-circle" alt="fogo do gmail" width="150" height="150">
+        <p class="lead">Eu sou Isabele Pereira</p>
+        <h1>Eu estudo solos</h1>
+        <p>Sou estudane do ensino médio, regular de exatas, e esse foi um trabalho escolar para meu portfólio.</p>
+    </header>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script> 
+</body>
+</html>
