--- a/index.html
+++ b/index.html
@@ -19,18 +19,33 @@
         <h1>Olá! Eu sou Isabele!</h1>
         <p>Eu trabalho com solos</p>
     </div> 
-    <h1>Example heading <span class="badge text-bg-secondary">New</span></h1> 
-    <p>técnica principal</p>
-    <div>
-        <p class="badge bg-secondary">HTML</p>
-        <p class="badge bg-secondary">CSS</p>
-    </div>
+    
     <header>
         <img src="img/portifolio.jfif" class="rounded-circle" alt="fogo do gmail" width="150" height="150">
         <p class="lead">Eu sou Isabele Pereira</p>
         <h1>Eu estudo solos</h1>
         <p>Sou estudane do ensino médio, regular de exatas, e esse foi um trabalho escolar para meu portfólio.</p>
-    </header>
+        <h1>Example heading <span class="badge text-bg-secondary">New</span></h1> 
+        <p>técnica principal</p>
+    <div>
+        <p class="badge bg-secondary">HTML</p>
+        <p class="badge bg-secondary">CSS</p>
+    </div>
+    <header>
+    <main class="container">
+        <h2>Meus projetos!</h2>
+        <div class="row">
+            <div class="col-md-4"> </div>
+            <!--projeto 1 -->
+            <div class="card">
+                <img src="img/j.png" alt="DRX">
+                <div class="card-body">
+                    <h5 class="card-title">DRX-MD</h5>
+                    <P class="card-text">Site feito pelo figma.</P>
+                    <a href="#" class="btn btn-primary">aumente imagem</a>
+                </div>
+    </main>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script> 
 </body>
 </html>
